--- a/HW 24.12.2022/index.html
+++ b/HW 24.12.2022/index.html
@@ -80,24 +80,24 @@
             <label for="Surname">
                 Фамилия:
             </label><br>
-            <input type="text" required id="Surname" placeholder="Впишите фамилию"></input>
+            <input type="text" required id="Surname" placeholder="Впишите фамилию"/>
         </div>
         <div>
             <label for="name">
                 Имя
             </label><br>
-            <input type="text" required id="name" placeholder="Впишите имя"></input></div>
+            <input type="text" required id="name" placeholder="Впишите имя"/></div>
         <div>
             <label for="last name">
                 Отчество
             </label><br>
-            <input type="text" required id="last name" placeholder="Впишите отчество"></input>
+            <input type="text" required id="last name" placeholder="Впишите отчество"/>
         </div>
         <div>
             <label for="faculty">
                 Факультет
             </label><br>
-            <input type="text" required id="faculty" placeholder="Впишите факультет"></input>
+            <input type="text" required id="faculty" placeholder="Впишите факультет"/>
         </div>
         <div>
             <label>Ваш курс</label>
@@ -105,10 +105,10 @@
         <div>
             <label for="first">
                 1</label>
-            <input type="radio" required id="first" ></input>
+            <input type="radio" required id="first"/>
             <label for="second">
                 2</label>
-            <input type="radio" required id="second" ></input>
+            <input type="radio" required id="second"/>
         </div>
         <div>
             <label for="education">
@@ -121,7 +121,7 @@
                 <option id="fourthED">4</option>
             </select>
         </div>
-        <input type="reset" value="Регистрация"></input>
+        <input type="reset" value="Регистрация"/>
     </form>
 
     <img src="memes.png" alt="memes" usemap="#workmap" width="400" height="400">
